crates/tlang_parser/tests/snapshots/parser_pipeline__pipeline_operator.snap
---
source: crates/tlang_parser/tests/parser_pipeline.rs
expression: "parse! (\"1 |> foo |> bar();\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 3,
      kind: Expr(Expr(
        id: 9,
        kind: BinaryOp(BinaryOpExpression(
          op: Pipeline,
          lhs: Expr(
            id: 6,
            kind: BinaryOp(BinaryOpExpression(
              op: Pipeline,
              lhs: Expr(
                id: 4,
                kind: Literal(UnsignedInteger(1)),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 0,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 1,
                  ),
                ),
              ),
              rhs: Expr(
                id: 5,
                kind: Path(Path(
                  segments: [
                    Ident(
                      name: "foo",
                      span: Span(
                        start: LineColumn(
                          line: 0,
                          column: 5,
                        ),
                        end: LineColumn(
                          line: 0,
                          column: 8,
                        ),
                      ),
                    ),
                  ],
                  res: Unresolved,
                  span: Span(
                    start: LineColumn(
                      line: 0,
                      column: 5,
                    ),
                    end: LineColumn(
                      line: 0,
                      column: 8,
                    ),
                  ),
                )),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 5,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 8,
                  ),
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: LineColumn(
                line: 0,
                column: 0,
              ),
              end: LineColumn(
                line: 0,
                column: 0,
              ),
            ),
          ),
          rhs: Expr(
            id: 8,
            kind: Call(CallExpression(
              callee: Expr(
                id: 7,
                kind: Path(Path(
                  segments: [
                    Ident(
                      name: "bar",
                      span: Span(
                        start: LineColumn(
                          line: 0,
                          column: 12,
                        ),
                        end: LineColumn(
                          line: 0,
                          column: 15,
                        ),
                      ),
                    ),
                  ],
                  res: Unresolved,
                  span: Span(
                    start: LineColumn(
                      line: 0,
                      column: 12,
                    ),
                    end: LineColumn(
                      line: 0,
                      column: 15,
                    ),
                  ),
                )),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 12,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 15,
                  ),
                ),
              ),
              arguments: [],
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: LineColumn(
                line: 0,
                column: 12,
              ),
              end: LineColumn(
                line: 0,
                column: 17,
              ),
            ),
          ),
        )),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: LineColumn(
            line: 0,
            column: 0,
          ),
          end: LineColumn(
            line: 0,
            column: 17,
          ),
        ),
      )),
      span: Span(
        start: LineColumn(
          line: 0,
          column: 0,
        ),
        end: LineColumn(
          line: 0,
          column: 18,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: LineColumn(
      line: 0,
      column: 0,
    ),
    end: LineColumn(
      line: 0,
      column: 18,
    ),
  ),
)
