crates/tlang_parser/tests/snapshots/parser_pipeline__pipeline_operator_to_function_call_with_wildcards.snap
---
source: crates/tlang_parser/tests/parser_pipeline.rs
expression: "parse! (\"1 |> foo(2, _);\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 3,
      kind: Expr(Expr(
        id: 9,
        kind: BinaryOp(BinaryOpExpression(
          op: Pipeline,
          lhs: Expr(
            id: 4,
            kind: Literal(UnsignedInteger(1)),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: LineColumn(
                line: 0,
                column: 0,
              ),
              end: LineColumn(
                line: 0,
                column: 1,
              ),
            ),
          ),
          rhs: Expr(
            id: 8,
            kind: Call(CallExpression(
              callee: Expr(
                id: 5,
                kind: Path(Path(
                  segments: [
                    Ident(
                      name: "foo",
                      span: Span(
                        start: LineColumn(
                          line: 0,
                          column: 5,
                        ),
                        end: LineColumn(
                          line: 0,
                          column: 8,
                        ),
                      ),
                    ),
                  ],
                  res: Unresolved,
                  span: Span(
                    start: LineColumn(
                      line: 0,
                      column: 5,
                    ),
                    end: LineColumn(
                      line: 0,
                      column: 8,
                    ),
                  ),
                )),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 5,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 8,
                  ),
                ),
              ),
              arguments: [
                Expr(
                  id: 6,
                  kind: Literal(UnsignedInteger(2)),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: LineColumn(
                      line: 0,
                      column: 9,
                    ),
                    end: LineColumn(
                      line: 0,
                      column: 10,
                    ),
                  ),
                ),
                Expr(
                  id: 7,
                  kind: Wildcard,
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: LineColumn(
                      line: 0,
                      column: 12,
                    ),
                    end: LineColumn(
                      line: 0,
                      column: 13,
                    ),
                  ),
                ),
              ],
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: LineColumn(
                line: 0,
                column: 5,
              ),
              end: LineColumn(
                line: 0,
                column: 14,
              ),
            ),
          ),
        )),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: LineColumn(
            line: 0,
            column: 0,
          ),
          end: LineColumn(
            line: 0,
            column: 14,
          ),
        ),
      )),
      span: Span(
        start: LineColumn(
          line: 0,
          column: 0,
        ),
        end: LineColumn(
          line: 0,
          column: 15,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: LineColumn(
      line: 0,
      column: 0,
    ),
    end: LineColumn(
      line: 0,
      column: 15,
    ),
  ),
)
